@@ -13,7 +13,7 @@ if test -z "`autoconf --version 2>&1|head -n 1|egrep '2.[56]'`"; then
     exit 1;
 fi
 
-if test -z "`automake --version 2>&1|head -n 1|egrep '1.[4-9]'`"; then
+if test -z "`automake --version 2>&1|head -n 1|egrep '1.([4-9]|10)'`"; then
 	echo "Automake 1.4+ is required. Aborting build...";
 	exit 1;
 fi
